--- a/code/hw3_code.Rmd
+++ b/code/hw3_code.Rmd
@@ -20,7 +20,7 @@ suppressPackageStartupMessages({
 # Stores the salinity data as an object called salinity
 salinity <- read.csv(here('data',"salinity-pickleweed.csv")) 
 # Stores my personal data as an object called my_data
-my_data <- read.csv(here('data',"193DS data - stress (3).csv")) 
+my_data <- read.csv(here('data',"193DS data - stress (5).csv")) 
 ```
 
 [Here is my GitHub Repository](https://github.com/samantha-gibson05/ENVS-193DS_homework-03)
@@ -132,6 +132,7 @@ In your description, be specific about the tests, their components, and their re
 Yes, both Pearson’s r and Spearman’s $\rho$ reject the null hypothesis of no association (Pearson’s r = 0.53, t(21) = 2.9, p = 0.009, $\alpha$ = 0.05; Spearman's $\rho$ = 0.59, S = 824, p < 0.003, $\alpha$ = 0.05). Both tests indicate a moderate positive relationship between soil salinity (mS/cm) and pickleweed biomass (g). The Spearman result is slightly stronger which is consistent with the diagnostics showing mild heteroscedasticity.
 
 ## Problem 2. Personal data
+xxx update again before submitting
 ### a. Updating your visualizations
 Revisit the visualizations you created in homework 2.
 
@@ -247,8 +248,12 @@ Inspired by warming stripes and quilt art I could create a visualization where e
 ### b. Create a sketch (on paper) of your idea.
 Include a photo of this sketch in your document.
 
+xxx need to do
+
 ### c. Make a draft of your visualization.
 Feel free to be creative with this! The one rule is that *you may not use any code to create your visualization*.
+
+xxx need to do
 
 ### d. Write an artist statement.
 An artist statement gives the audience context to understand your work. For each of the following points, write 1-3 sentences to address:
@@ -289,6 +294,7 @@ The statistical test in this paper is a Kruskal–Wallis test (to compare the th
 Insert the figure or table you described in Homework 2 here.
 
 ```{r}
+# includes figure
 knitr::include_graphics(here('code',"pone.0117630.g005.png"))
 ```
 
